styles/common/_grid.scss
.form-control-buttons {
  float: left;
  max-width: 223px;
  margin-right: 10px;
  button {
    margin: 0 2px 4px 0;
    text-align: center;
    width: auto;
    padding-left: 15px;
    padding-right: 15px;
    font-size: 12px;
    line-height: 1em !important;
    i.fa-ok {
      display: none;
      padding-top: 0;
      padding-bottom: 0;
      font-size: 14px;
      line-height: inherit;
    }
    &.active {
      color: #457FAC;
      padding-left: 3px;
      background: #d8d8d8;
      border-color: #d0d0d0;
      i.fa-ok {
        display: inline-block;
      }
    }
  }
}

.form-builder-canvas, .form-builder-row {
  .obs-control-select-wrapper {
    width: 197px !important;
    display: inline-block !important;
    box-sizing: border-box;
    float: left;
    margin-right: 10px;
    &.form-builder-error {
      border: none !important;
      background: none !important;
      .Select-control {
        border: 2px solid $red !important;
        background: #ffcdcd !important;
        input {
          background-color: transparent;
        }
      }
    }
  }
  .Select-control {
    height: 25px;
    .Select-placeholder, .Select-value {
      line-height: 24px;
      max-width: initial;
    }
  }
  .Select-input {
    height: 25px;
    input {
      padding: 3px 0 !important;
      margin-top: 0 !important;

    }
  }
  .Select--single > .Select-control .Select-value .Select-value-label{
    width:135px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: block;
  }
  .Select--multi {
    .Select-control {
      width: 275px;
      .Select-value {
        float: left;
        background: #eee;
        border-radius: 5px;
        padding: 5px;
        box-sizing: border-box;
        margin: 3px;
        line-height: 1em;
        .Select-value-icon {
          float: left;
          display: inline-block;
          cursor: pointer;
          width: 12px;
        }
      }
    }
    .Select-menu-outer {
      width: 275px;
    }
  }
}

.form-builder-error{
  border: 2px solid $error;
  background: $errorBg;
}
.form-builder-warning {
  border: 2px solid $warningOutline;
  background: $warningBg;
  color: $red;
}

